develop: Se añaden campos de rango de fecha y se formatean las mismas, 2020-06-14-00.00.00
