# bcnc-ms-stock-api-domain/src/main/java/es/bcnc/domain/model/search_prices/DomainSearchPriceResultModel.java
@@ -1,6 +1,7 @@
 package es.bcnc.domain.model.search_prices;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
 
 import lombok.AllArgsConstructor;
 import lombok.Data;
@@ -9,10 +10,12 @@ import lombok.NoArgsConstructor;
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
-public class DomainSearchPriceModel {
+public class DomainSearchPriceResultModel {
 
 	private Long productId;
 	private Long brandId;
 	private Long rateId;
+	private LocalDateTime startDate;
+	private LocalDateTime endDate;
 	private BigDecimal price;
 }
